ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: a8315fb9ded0f4324a424e9397bbbb68-1985253136.eu-north-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-api
            port:
              number: 8081
        annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /$2  # ✅ Keep path as `/auth/...`
      - path: /api/todos(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todos-api
            port:
              number: 8082
        annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /$2  # ✅ Keep path as `/todos/...`
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-api
            port:
              number: 8081
